# logic-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main  main.cpp
include/: component.h  event.h  event_queue.h  gate.h  sequential.h  signal.h  simulator.h
src/: component.cpp  event.cpp  event_queue.cpp  gate.cpp  sequential.cpp  signal.cpp  simulator.cpp
tests/: test_comb.cpp  test_dff.cpp  test_event.cpp  test_integration.cpp  test_signal.cpp  test_trace_waveform.cpp
